[package]
name = "pocket-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
ftp = "3.0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
walkdir = "2.3.2"
