[package]
name = "pocket-sync"
version = "5.0.0"
description = "A GUI tool for doing stuff with the Analogue Pocket"
authors = ["neil-morrison44"]
license = "AGPL-3.0"
repository = "https://github.com/neil-morrison44/pocket-sync"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
async-walkdir = "0.2.0"
bytes = "1.4"
crc32fast = "1.3.2"
feed-rs = "1.3.0"
fs-set-times = "0.20.0"
futures = "0.3.28"
futures-locks = "0.7.1"
hex = "0.4.3"
md-5 = "0.10.5"
mister_saves_sync = { path = "./mister_saves_sync" }
notify = { version = "6.1.1", default-features = false, features = [
  "fsevent-sys",
  "macos_fsevent",
  "serde",
] }
notify-debouncer-full = { version = "0.3.1" }
num_cpus = "1.16.0"
openfpga-instance-packager = { git = "https://github.com/neil-morrison44/openfpga-instance-packager", tag = "v0.3.1" }
rayon = "1.8.0"
reqwest = { version = "0.11.18", features = ["blocking", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.0.0", features = [] }
tempdir = "0.3.7"
time = "0.3.15"
tokio = { version = "1.28.2", features = ["macros"] }
walkdir = "2.3.3"
zip = { version = "0.6.4", features = ["deflate", "time"] }
log = "^0.4"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
anyhow = "1.0.79"
bitflags = "2.4.2"
once_cell = "1.19.0"
nestify = "0.3.2"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-window-state = "2.0.0"

[dev-dependencies]
mockito = { version = "1.1.1", default-features = false }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0"
