[package]
name = "pocket-sync"
version = "5.6.0"
description = "A GUI tool for doing stuff with the Analogue Pocket"
authors = ["neil-morrison44"]
license = "AGPL-3.0"
repository = "https://github.com/neil-morrison44/pocket-sync"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
async-walkdir = "2.1.0"
bytes = "1.10.1"
crc32fast = "1.4.2"
feed-rs = "2.3.1"
fs-set-times = "0.20.3"
futures = "0.3.31"
futures-locks = "0.7.1"
hex = "0.4.3"
md-5 = "0.10.6"
mister_saves_sync = { path = "./mister_saves_sync" }
notify = { version = "8.0.0", default-features = false, features = [
  "fsevent-sys",
  "macos_fsevent",
  "serde",
] }
notify-debouncer-full = { version = "0.5.0" }
num_cpus = "1.16.0"
openfpga-instance-packager = { git = "https://github.com/neil-morrison44/openfpga-instance-packager", tag = "v0.3.1" }
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.4.0", features = [] }
tempdir = "0.3.7"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["macros"] }
walkdir = "2.5.0"
zip = { version = "2.5.0", features = ["deflate", "time"] }
log = "^0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
anyhow = "1.0.97"
bitflags = "2.9.0"
once_cell = "1.21.3"
nestify = "0.3.3"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-http = "2.4.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.3.1"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-process = "2.2.0"

[dev-dependencies]
mockito = { version = "1.7.0", default-features = false }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.6.1"
