[package]
name = "mister_saves_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
async-trait = "0.1.68"
filetime = "0.2.18"
suppaftp = "4.5.2"
walkdir = "2.3.2"
tokio = "1.26.0"
